cabal-version: 3.0
name:          ecluse
version:       0.1.0
synopsis:      Supply-chain resilience proxy for package registries
description:
  Écluse is a controlled passage in front of package registries (npm, PyPI, …):
  every dependency clears resilience and policy checks — version and age gates
  and rule-based allow/deny — before it reaches your build. See the README for
  the architecture and configuration.
homepage:      https://github.com/AlexaDeWit/Ecluse
license:       MIT
license-file:  LICENSE
author:        Alexandra DeWit
maintainer:    https://github.com/AlexaDeWit
category:      Network, Security
build-type:    Simple

-- Test fixtures read at runtime by the pure unit suite. The version-ordering
-- file is reference-oracle output (regenerate with `make gen-version-fixtures`);
-- the npm/*.json bodies are captures derived from
-- docs/research/reverse-engineering/npm.md, decoded by Ecluse.Registry.Npm.Wire.
-- express.full.json is a real, untrimmed capture of a large trusted package's full
-- packument (registry.npmjs.org/express), so the response-bound defaults can be
-- proven not to false-positive on a legitimate large package.
--
-- bench/corpus/npm/*.json is the curated real-world packument corpus the benchmarks
-- read at run time (frozen data, pinned by bench/corpus/pins.json and re-captured
-- deliberately with `make gen-bench-corpus`; see docs/architecture/performance.md).
-- bench/corpus/pins.json is the shared registry catalogue (capture pins + the smoke
-- curated names) read by the Node capture script and Ecluse.Test.RegistryCapture.
-- acceptance/criteria.json is the version-controlled acceptance budget for the live
-- performance-acceptance harness (Ecluse.Acceptance / the perf-acceptance executable).
extra-source-files:
  acceptance/criteria.json
  bench/corpus/npm/*.json
  bench/corpus/pins.json
  core/test/unit/fixtures/npm/*.json
  core/test/unit/fixtures/version-ordering.txt
  test/fixtures/osv/v1/*.json
  test/fixtures/osv/v2/*.json
  test/unit/fixtures/osv/*.zip

source-repository head
  type:     git
  location: https://github.com/AlexaDeWit/Ecluse.git

-- Compile the test- and dev-only plain-HTTP loopback egress constructor
-- (Ecluse.Core.Security.Egress.DevHttp). OFF by default, so the release library and
-- executable carry no way to construct a non-https registry target. The dev shell and
-- the test/CI builds turn it ON (cabal.project enables it for `cabal` in the dev shell;
-- the flake's unit-core/unit-app checks pass -fdev-http-egress) so the loopback
-- integration suites compile; the Nix-built release `ecluse` (callCabal2nix, which
-- ignores cabal.project and uses this default) leaves it off.
flag dev-http-egress
  description: Expose the test-only plain-HTTP loopback egress constructor.
  default:     False
  manual:      True

-- Shared settings for every component. relude replaces the default prelude via
-- cabal mixins (see docs/architecture.md "relude as the implicit prelude").
common shared
  -- Warning set. -Wall plus extra warnings chosen to reinforce the conventions
  -- in STYLE.md; warnings are promoted to errors for our package in
  -- cabal.project. Deliberately omitted: -Wunused-packages (the relude mixin
  -- defeats its attribution; see docs/architecture.md), -Wmissing-import-lists
  -- (we use open imports for internal modules), and -Wmissing-local-signatures
  -- (where-helpers are allowed to be inferred).
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-selectors
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wmissing-export-lists -Wname-shadowing
    -Wpartial-fields -Wredundant-bang-patterns -Wredundant-constraints

  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    StrictData

  build-depends:
    , base        ^>=4.20
    , file-embed  ^>=0.0.16
    , relude      ^>=1.2

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

-- The pure capability core: domain types, registry adapters, version grammars,
-- credential refresh, rule engine, queue abstraction, security, and the
-- agnostic server layer (Route/Response/Conditional/Stream) and metrics catalogue.
-- The main application library and all test suites depend on this.
library ecluse-core
  import:          shared
  hs-source-dirs:  core/src
  exposed-modules:
    Ecluse.Core.Breaker
    Ecluse.Core.Credential
    Ecluse.Core.Credential.Refresh
    Ecluse.Core.Credential.Refresh.Internal
    Ecluse.Core.Cve
    Ecluse.Core.Cve.Internal
    Ecluse.Core.Cve.Slot
    Ecluse.Core.Ecosystem
    Ecluse.Core.Fault
    Ecluse.Core.Fault.Http
    Ecluse.Core.InFlight
    Ecluse.Core.Osv.Advisory
    Ecluse.Core.Osv.Compile
    Ecluse.Core.Osv.Retry
    Ecluse.Core.Osv.Schema
    Ecluse.Core.Osv.Stream
    Ecluse.Core.Package
    Ecluse.Core.Package.Admission
    Ecluse.Core.Package.Filter
    Ecluse.Core.Package.Hash
    Ecluse.Core.Package.Integrity
    Ecluse.Core.Package.Merge
    Ecluse.Core.Queue
    Ecluse.Core.Queue.Memory
    Ecluse.Core.Registry
    Ecluse.Core.Registry.Adapter
    Ecluse.Core.Registry.Adapter.Types
    Ecluse.Core.Registry.Fault
    Ecluse.Core.Registry.Metadata
    Ecluse.Core.Registry.Npm
    Ecluse.Core.Registry.Npm.Adapter
    Ecluse.Core.Registry.Npm.Filter
    Ecluse.Core.Registry.Npm.Metadata
    Ecluse.Core.Registry.Npm.Project
    Ecluse.Core.Registry.Npm.Publish
    Ecluse.Core.Registry.Npm.Request
    Ecluse.Core.Registry.Npm.Route
    Ecluse.Core.Registry.Npm.SelectiveDecode
    Ecluse.Core.Registry.Npm.Serve
    Ecluse.Core.Registry.Npm.Wire
    Ecluse.Core.Registry.Publish
    Ecluse.Core.Rules
    Ecluse.Core.Rules.Effectful
    Ecluse.Core.Rules.Types
    Ecluse.Core.Security
    Ecluse.Core.Security.Egress
    Ecluse.Core.Security.Host
    Ecluse.Core.Security.Limits
    Ecluse.Core.Server.Cache
    Ecluse.Core.Server.Cache.Store
    Ecluse.Core.Server.Admission
    Ecluse.Core.Server.Conditional
    Ecluse.Core.Server.Context
    Ecluse.Core.Server.Fault
    Ecluse.Core.Server.Metadata
    Ecluse.Core.Server.Pipeline
    Ecluse.Core.Server.Pipeline.Diagnostics
    Ecluse.Core.Server.Pipeline.Origin
    Ecluse.Core.Server.Pipeline.Packument
    Ecluse.Core.Server.Pipeline.Tarball
    Ecluse.Core.Server.Pipeline.Publish
    Ecluse.Core.Server.Pipeline.Shared
    Ecluse.Core.Server.Pipeline.Internal
    Ecluse.Core.Server.Path
    Ecluse.Core.Server.Response
    Ecluse.Core.Server.Route
    Ecluse.Core.Server.RouteDoc
    Ecluse.Core.Server.RouteSpec
    Ecluse.Core.Server.Stream
    Ecluse.Core.Supervision
    Ecluse.Core.Telemetry.Metrics
    Ecluse.Core.Telemetry.Record
    Ecluse.Core.Telemetry.Span
    Ecluse.Core.Text
    Ecluse.Core.Version
    Ecluse.Core.Wire
    Ecluse.Core.Worker
      Ecluse.Core.Worker.Fetch
      Ecluse.Core.Worker.Integrity
      Ecluse.Core.Worker.Job
      Ecluse.Core.Worker.Liveness
      Ecluse.Core.Worker.Loop
      Ecluse.Core.Worker.Types

  -- Per-ecosystem version grammars and their shared lexical atoms. Internal to
  -- ecluse-core: VersionKey is opaque, so callers reach these only through the
  -- agnostic Ecluse.Core.Version API. Egress.Internal holds the raw RegistryUrl
  -- constructor: an other-module, so it is reachable only from within ecluse-core
  -- (the app library and executable see only the abstract type through
  -- Ecluse.Core.Security.Egress).
  other-modules:
    Ecluse.Core.Security.Egress.Internal
    Ecluse.Core.Version.Gem
    Ecluse.Core.Version.Pep440
    Ecluse.Core.Version.Semver
  exposed-modules:
    Ecluse.Core.Version.Token

  other-modules:
    Paths_ecluse

  autogen-modules: Paths_ecluse

  -- The test/dev-only plain-HTTP loopback constructor, exposed only when the flag is
  -- on. Off in a release build, so the constructor is absent from the shipped artifact.
  if flag(dev-http-egress)
    exposed-modules: Ecluse.Core.Security.Egress.DevHttp

  build-depends:
    , aeson                 ^>=2.2
    , bytestring            ^>=0.12
    , cache                 ^>=0.1.3
    , clock                 ^>=0.8
    , containers            ^>=0.7
    , conduit               ^>=1.3
    , directory             ^>=1.3
    , filepath              ^>=1.4 || ^>=1.5
    , crypton               ^>=1.0
    , cvss                  ^>=0.3
    , exceptions            ^>=0.10
    , sqlite-simple         ^>=0.4
    , http-client           ^>=0.7
    , http-client-tls       ^>=0.3.6
    , http-conduit          ^>=2.3
    , http-types            ^>=0.12
    , hs-opentelemetry-api  ^>=1.0
    , iproute               ^>=1.7
    , katip                 ^>=0.8.8
    , memory                ^>=0.18
    , microlens             ^>=0.4.13
    , microlens-aeson       ^>=2.5
    , mtl                   ^>=2.3
    , network               ^>=3.2
    , resourcet             ^>=1.3
    , retry                 ^>=0.9
    , stm                   ^>=2.5
    , text                  ^>=2.1
    , text-short            ^>=0.1.6
    , time                  ^>=1.12
    , tls                   >=2.1      && <2.3
    , universe-base         ^>=1.1
    , unliftio              ^>=0.2.25
    , vector                ^>=0.13
    , versions              ^>=6.0
    , wai                   ^>=3.2
    , zip-stream            ^>=0.2

library
  import:          shared
  hs-source-dirs:  src
  other-modules:   Paths_ecluse
  autogen-modules: Paths_ecluse
  exposed-modules:
    Ecluse
    Ecluse.Boot
    Ecluse.Proxy
    Ecluse.Proxy.CveSync
    Ecluse.Pilot
    Ecluse.Dredger
    Ecluse.Composition
    Ecluse.Composition.BootError
    Ecluse.Composition.Credential
    Ecluse.Composition.MirrorQueue
    Ecluse.Composition.Sizing
    Ecluse.Composition.Worker
    Ecluse.Config
    Ecluse.CLI
    Ecluse.Config.Aeson
    Ecluse.Config.DefaultConfig
    Ecluse.Config.Parser
    Ecluse.Config.Resolve
    Ecluse.Config.Rule
    Ecluse.Config.Types
    Ecluse.Rts

  build-depends:
    , ecluse:ecluse-core
    , aeson                           ^>=2.2
    , amazonka                        ^>=2.0
    , amazonka-codeartifact           ^>=2.0
    , amazonka-core                   ^>=2.0
    , amazonka-s3                     ^>=2.0
    , amazonka-sqs                    ^>=2.0
    , amazonka-sts                    ^>=2.0
    , bytestring                      ^>=0.12
    , containers                      ^>=0.7
    , crypton                         ^>=1.0
    , cvss                            ^>=0.3
    , yaml                            ^>=0.11
    , directory                       ^>=1.3
    , exceptions                      ^>=0.10
    , filepath                        ^>=1.5
    , http-client                     ^>=0.7
    , http-client-tls                 ^>=0.3.6
    , http-types                      ^>=0.12
    , hs-opentelemetry-api            ^>=1.0
    , hs-opentelemetry-exporter-otlp  ^>=1.0
    , hs-opentelemetry-instrumentation-http-client  ^>=1.0
    , hs-opentelemetry-instrumentation-wai          ^>=1.0
    , hs-opentelemetry-propagator-w3c ^>=1.0
    , hs-opentelemetry-sdk            ^>=1.0
    , iproute                         ^>=1.7
    , katip                           ^>=0.8.8
    , memory                          ^>=0.18
    , network                         ^>=3.2
    , network-uri                     ^>=2.6
    , ecluse:ecluse-runtime
    , optparse-applicative            >=0.18 && <0.20
    , resourcet                       ^>=1.3
    , retry                           ^>=0.9
    , stm                             ^>=2.5
    , text                            ^>=2.1
    , time                            ^>=1.12
    , unix                            ^>=2.8
    , unliftio                        ^>=0.2.25
    , validation-selective            ^>=0.2
    , vector                          ^>=0.13
    , versions                        ^>=6.0
    , wai                             ^>=3.2
    , wai-extra                       ^>=3.1
    , warp                            ^>=3.4
    , conduit                         ^>=1.3
    , conduit-extra                   ^>=1.3
    , http-conduit                    ^>=2.3
    , zip-stream                      ^>=0.2
    , sqlite-simple                   ^>=0.4
    , directory                       ^>=1.3
    , filepath                        ^>=1.4 || ^>=1.5
    , primitive                       ^>=0.9

-- The effectful runtime edge: the capabilities that bind process-global substrate
-- (the OpenTelemetry SDK, the warp listener, the katip scribes) and the cloud
-- adapters (amazonka SQS / CodeArtifact / S3), plus the runtime environment record
-- (Ecluse.Runtime.Env) and the OSV artifact S3 upload. It depends on ecluse-core; the
-- composition shell (library ecluse) depends on THIS and wires it together, so the
-- dependency arrow points inward only (shell -> runtime -> core).
library ecluse-runtime
  import:          shared
  hs-source-dirs:  runtime/src
  exposed-modules:
    Ecluse.Runtime.Aws.Fault
    Ecluse.Runtime.Credential.CodeArtifact
    Ecluse.Runtime.Cve.Sync
    Ecluse.Runtime.Env
    Ecluse.Runtime.Log
    Ecluse.Runtime.Pilot.Export
    Ecluse.Runtime.Queue.Sqs
    Ecluse.Runtime.Server
    Ecluse.Runtime.Server.Drain
    Ecluse.Runtime.Server.Halt
    Ecluse.Runtime.Server.Middleware
    Ecluse.Runtime.Telemetry
    Ecluse.Runtime.Telemetry.Correlation
    Ecluse.Runtime.Telemetry.Instruments
    Ecluse.Runtime.Telemetry.Reporters
    Ecluse.Runtime.Telemetry.Resolve
    Ecluse.Runtime.Telemetry.Tracing

  build-depends:
    , ecluse:ecluse-core
    , aeson                           ^>=2.2
    , amazonka                        ^>=2.0
    , amazonka-codeartifact           ^>=2.0
    , amazonka-core                   ^>=2.0
    , amazonka-s3                     ^>=2.0
    , amazonka-sqs                    ^>=2.0
    , amazonka-sts                    ^>=2.0
    , bytestring                      ^>=0.12
    , cache                           ^>=0.1.3
    , clock                           ^>=0.8
    , conduit                         ^>=1.3
    , containers                      ^>=0.7
    , crypton                         ^>=1.0
    , directory                       ^>=1.3
    , exceptions                      ^>=0.10
    , filepath                        ^>=1.4 || ^>=1.5
    , http-client                     ^>=0.7
    , http-client-tls                 ^>=0.3.6
    , http-types                      ^>=0.12
    , hs-opentelemetry-api            ^>=1.0
    , hs-opentelemetry-exporter-otlp  ^>=1.0
    , hs-opentelemetry-instrumentation-http-client  ^>=1.0
    , hs-opentelemetry-instrumentation-wai          ^>=1.0
    , hs-opentelemetry-propagator-w3c ^>=1.0
    , hs-opentelemetry-sdk            ^>=1.0
    , iproute                         ^>=1.7
    , katip                           ^>=0.8.8
    , memory                          ^>=0.18
    , microlens                       ^>=0.4.13
    , mtl                             ^>=2.3
    , network                         ^>=3.2
    , resourcet                       ^>=1.3
    , retry                           ^>=0.9
    , stm                             ^>=2.5
    , text                            ^>=2.1
    , time                            ^>=1.12
    , unix                            ^>=2.8
    , unliftio                        ^>=0.2.25
    , vector                          ^>=0.13
    , wai                             ^>=3.2
    , wai-extra                       ^>=3.1
    , warp                            ^>=3.4

executable ecluse
  import:         shared
  -- The threaded runtime is required: with telemetry enabled the OpenTelemetry SDK
  -- runs a batch span processor on a background thread, which aborts under the
  -- non-threaded RTS. -N lets the server and worker use every core.
  --
  -- -A64m -n4m tune the GC for the serve path's allocation profile: assembling and
  -- re-serialising a many-version packument allocates tens of MB per request, and
  -- the default 4 MB allocation area makes the process collect hundreds of times a
  -- second under load (GC was ~half the wall time in the load benchmarks). A 64 MB
  -- per-capability allocation area divided into 4 MB chunks (so capabilities share
  -- it instead of stranding idle nurseries) cuts the collection count by an order
  -- of magnitude. Operators can override at run time, e.g.
  -- `ecluse +RTS -A16m -RTS`, since -rtsopts is set; see USAGE.md.
  ghc-options:    -threaded -rtsopts "-with-rtsopts=-N -A64m -n4m"
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  ecluse

-- The capability-manifest assembly: the pure (ManifestSource -> OpenApi) builder
-- and the owned schemas. An INTERNAL sublibrary (the ecluse-test-support pattern)
-- so the heavy OpenAPI dependency tree (openapi3 + autodocodec + lens/optics/…)
-- stays OUT of the shipped `library ecluse` / `executable ecluse` closure: it is
-- depended on only by the openapi-gen generator and the ecluse-unit test suite,
-- never by the app library. It links ecluse-core (the Route enumeration and the
-- served types), not the app library.
library ecluse-manifest
  import:          shared
  hs-source-dirs:  manifest
  exposed-modules: Ecluse.Manifest
  build-depends:
    , ecluse:ecluse-core
    , aeson                      ^>=2.2
    , aeson-pretty               ^>=0.8
    , autodocodec                ^>=0.5
    , autodocodec-openapi3       ^>=0.3
    , http-media                 ^>=0.8
    , http-types                 ^>=0.12
    , insert-ordered-containers  ^>=0.2
    , openapi3                   ^>=3.2
    , text                       ^>=2.1

-- The capability-manifest generator: a build-time component that assembles the
-- OpenAPI document (Ecluse.Manifest) from the fixed canonical source and writes
-- the committed openapi.json. It depends on the ecluse-manifest sublibrary, NOT the
-- app library, so the OpenAPI dependency tree never reaches the running proxy. Run
-- with `cabal run openapi-gen`.
executable openapi-gen
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: gen
  build-depends:
    , directory          ^>=1.3
    , ecluse:ecluse-manifest
    , filepath           ^>=1.5

-- Internal test-support library shared by every suite below. The common home
-- for cross-suite helpers, fixtures, and specs; it links against the library
-- under test so shared fixtures can build domain values directly.
library ecluse-test-support
  import:          shared
  hs-source-dirs:  test/support
  exposed-modules:
    Ecluse.Test.Container.Image
    Ecluse.Test.Containers
    Ecluse.Test.Credential
    Ecluse.Test.Cve
    Ecluse.Test.Metrics
    Ecluse.Test.Osv
    Ecluse.Test.OsvDb
    Ecluse.Test.Package
    Ecluse.Test.Port
    Ecluse.Test.Queue
    Ecluse.Test.Registry.Npm
    Ecluse.Test.Registry.Pypi.Wire
    Ecluse.Test.Registry.Rubygems.Wire
    Ecluse.Test.RegistryCapture
    Ecluse.Test.Rules
    Ecluse.Test.Server.Cache
    Ecluse.Test.Server.Mount
    Ecluse.Test.Stub
    Ecluse.Test.Support
    Ecluse.Test.Version
    Ecluse.Test.Worker

  build-depends:
    , ecluse:ecluse-core
    , aeson             ^>=2.2
    , bytestring        ^>=0.12
    , case-insensitive  ^>=1.2
    , conduit           ^>=1.3
    , containers        ^>=0.7
    , filepath          ^>=1.4 || ^>=1.5
    , hedgehog          ^>=1.5
    , hspec             ^>=2.11
    , http-client       ^>=0.7
    , http-types        ^>=0.12
    , exceptions        ^>=0.10
    , katip             ^>=0.8.8
    , primitive         ^>=0.9.1
    , resourcet         ^>=1.3
    , temporary         ^>=1.3
    , unliftio          ^>=0.2.25
    , sqlite-simple     ^>=0.4
    , text              ^>=2.1
    , time              ^>=1.12
    , universe-base     ^>=1.1
    , wai               ^>=3.2
    , warp              ^>=3.4
    , zip-stream        ^>=0.2

-- Core unit tests: cover every Ecluse.Core.* module. Pure, fast, deterministic. Gating.
-- MUST NOT list the `ecluse` app library in build-depends: its absence is the partition
-- enforcement — an app spec accidentally placed here fails to compile.
test-suite ecluse-core-unit
  import:             shared
  -- hspec-discover generates a Main without an export list. -threaded is required
  -- by the admission wait (GHC.Conc.registerDelay aborts under the non-threaded
  -- RTS); the served process always runs threaded, so the suite matches it.
  ghc-options:        -Wno-missing-export-lists -threaded
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     core/test/unit
  other-modules:
    Ecluse.BreakerSpec
    Ecluse.CredentialSpec
    Ecluse.Credential.Refresh.InternalSpec
    Ecluse.Cve.SlotSpec
    Ecluse.CveSpec
    Ecluse.InFlightSpec
    Ecluse.Package.AdmissionSpec
    Ecluse.Package.FilterSpec
    Ecluse.Package.IntegritySpec
    Ecluse.Package.MergeSpec
    Ecluse.Osv.AdvisorySpec
    Ecluse.Osv.CompileSpec
    Ecluse.Osv.RetrySpec
    Ecluse.Osv.SchemaSpec
    Ecluse.Package.HashSpec
    Ecluse.PackageSpec
    Ecluse.Queue.MemorySpec
    Ecluse.Queue.Support
    Ecluse.QueueSpec
    Ecluse.Registry.AdapterSpec
    Ecluse.Registry.NpmSpec
    Ecluse.Registry.Npm.FilterSpec
    Ecluse.Registry.Npm.MetadataSpec
    Ecluse.Registry.Npm.ProjectSpec
    Ecluse.Registry.Npm.PublishSpec
    Ecluse.Registry.Npm.RequestSpec
    Ecluse.Registry.Npm.RouteSpec
    Ecluse.Registry.Npm.RouteTableSpec
    Ecluse.Registry.Npm.ServeSpec
    Ecluse.Registry.Npm.WireSpec
    Ecluse.Registry.PublishSpec
    Ecluse.Test.Registry.Pypi.WireSpec
    Ecluse.Test.Registry.Rubygems.WireSpec
    Ecluse.Rules.EffectfulSpec
    Ecluse.RulesSpec
    Ecluse.SecuritySpec
    Ecluse.Security.EgressSpec
    Ecluse.Security.HostSpec
    Ecluse.Security.LimitsSpec
    Ecluse.Server.CacheSpec
    Ecluse.Server.Cache.StoreSpec
    Ecluse.Server.ConditionalSpec
    Ecluse.Server.FaultSpec
    Ecluse.Server.MetadataSpec
    Ecluse.Server.Pipeline.InternalSpec
    Ecluse.Server.Pipeline.TarballSpec
    Ecluse.Server.Pipeline.PackumentSpec
    Ecluse.Server.AdmissionSpec
    Ecluse.Server.PipelineSpec
    Ecluse.Server.ResponseSpec
    Ecluse.Server.PathSpec
    Ecluse.Server.StreamSpec
    Ecluse.SupervisionSpec
    Ecluse.Telemetry.MetricsSpec
    Ecluse.Test.Container.ImageSpec
    Ecluse.Test.RegistryCaptureSpec
    Ecluse.Test.SupportLinkageSpec
    Ecluse.TextSpec
    Ecluse.VersionOrderingSpec
    Ecluse.VersionSpec
    Ecluse.Version.TokenSpec
    Ecluse.WireSpec
    Ecluse.Worker.IntegritySpec
    Ecluse.Worker.JobSpec
    Ecluse.Worker.LivenessSpec
    Ecluse.Worker.LoopSpec
    Ecluse.Worker.Support
    Paths_ecluse

  autogen-modules:    Paths_ecluse
  build-tool-depends: hspec-discover:hspec-discover ^>=2.11
  build-depends:
    , ecluse:ecluse-core
    , ecluse:ecluse-test-support
    , aeson             ^>=2.2
    , amazonka          ^>=2.0
    , bytestring        ^>=0.12
    , case-insensitive  ^>=1.2
    , containers        ^>=0.7
    , crypton           ^>=1.0
    , hedgehog          ^>=1.5
    , hspec             ^>=2.11
    , hspec-hedgehog    ^>=0.3
    , http-client       ^>=0.7
    , http-types        ^>=0.12
    , iproute           ^>=1.7
    , katip             ^>=0.8.8
    , memory            ^>=0.18
    , network           ^>=3.2
    , retry             ^>=0.9
    , exceptions        ^>=0.10
    , scientific        ^>=0.3
    , sqlite-simple     ^>=0.4
    , stm               ^>=2.5
    , conduit           ^>=1.3
    , deepseq           ^>=1.5
    , directory         ^>=1.3
    , filepath          ^>=1.4 || ^>=1.5
    , temporary         ^>=1.3
    , text              ^>=2.1
    , text-short        ^>=0.1.6
    , time              ^>=1.12
    , tls               >=2.1  && <2.3
    , universe-base     ^>=1.1
    , unliftio          ^>=0.2.25
    , vector            ^>=0.13
    , wai               ^>=3.2
    , warp              ^>=3.4
    -- Test-only: gzip a body so the bounded metadata read can be asserted to bound
    -- DECOMPRESSED bytes (a small compressed blob that inflates past the cap). zlib
    -- is already in the resolved build plan (a transitive dependency), so this adds
    -- no new resolution.
    , zlib              ^>=0.7

-- App-layer unit tests: cover every Ecluse.* (non-Core) module. Pure, fast,
-- deterministic. Gating.
test-suite ecluse-unit
  import:             shared
  -- hspec-discover generates a Main without an export list.
  ghc-options:        -Wno-missing-export-lists
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test/unit
  other-modules:
    Ecluse.AcceptanceSpec
    Ecluse.BenchLoad.NormaliseSpec
    Ecluse.BenchReportSpec
    Ecluse.BootSpec
    Ecluse.CLISpec
    Ecluse.Composition.BootErrorSpec
    Ecluse.Composition.CredentialSpec
    Ecluse.Composition.MirrorQueueSpec
    Ecluse.Composition.SizingSpec
    Ecluse.Composition.Support
    Ecluse.Composition.WorkerSpec
    Ecluse.CompositionSpec
    Ecluse.Config.AesonSpec
    Ecluse.Config.ResolveSpec
    Ecluse.Config.RuleSpec
    Ecluse.Config.TypesSpec
    Ecluse.ConfigSpec
    Ecluse.DredgerSpec
    Ecluse.EnvSpec
    Ecluse.Core.CveSpec
    Ecluse.Core.Security.HostSpec
    Ecluse.ManifestSpec
    Ecluse.PilotSpec
    Ecluse.Proxy.CveSyncSpec
    Ecluse.ProxySpec
    Ecluse.RuntimeSpec
    Ecluse.ServerSpec
    Ecluse.Test.OsvSpec
    Paths_ecluse

  autogen-modules:    Paths_ecluse
  build-tool-depends: hspec-discover:hspec-discover ^>=2.11
  build-depends:
    , ecluse
    , ecluse:ecluse-acceptance
    , ecluse:ecluse-bench-load
    , ecluse:ecluse-bench-report
    , optparse-applicative
    , ecluse:ecluse-core
    , ecluse:ecluse-runtime
    , ecluse:ecluse-manifest
    , ecluse:ecluse-test-support
    , aeson             ^>=2.2
    , autodocodec       ^>=0.5
    , bytestring        ^>=0.12
    , cache             ^>=0.1.3
    , case-insensitive  ^>=1.2
    , containers        ^>=0.7
    , crypton           ^>=1.0
    , exceptions        ^>=0.10
    , yaml              ^>=0.11
    , hedgehog          ^>=1.5
    , hspec             ^>=2.11
    , conduit           ^>=1.3
    , hspec-hedgehog    ^>=0.3
    , hspec-wai         ^>=0.11
    , http-client       ^>=0.7
    , insert-ordered-containers  ^>=0.2
    , openapi3          ^>=3.2
    , http-types        ^>=0.12
    , iproute           ^>=1.7
    , hs-opentelemetry-api  ^>=1.0
    , hs-opentelemetry-exporter-in-memory  ^>=1.0
    , hs-opentelemetry-instrumentation-http-client  ^>=1.0
    , hs-opentelemetry-instrumentation-wai          ^>=1.0
    , hs-opentelemetry-propagator-w3c     ^>=1.0
    , hs-opentelemetry-sdk  ^>=1.0
    , katip             ^>=0.8.8
    , memory            ^>=0.18
    , mtl               ^>=2.3
    , primitive         ^>=0.9.1
    , retry             ^>=0.9
    , text              ^>=2.1
    , time              ^>=1.12
    , unliftio          ^>=0.2.25
    , wai               ^>=3.2
    , wai-extra         ^>=3.1
    , warp              ^>=3.4
    , sqlite-simple     ^>=0.4
    , directory         ^>=1.3
    , filepath          ^>=1.4 || ^>=1.5
    , temporary         ^>=1.3

-- Runtime-tier unit tests: cover the Ecluse.Runtime.* capability modules that need no
-- application library (the cloud adapters, the telemetry SDK wiring, and logging). Pure,
-- fast, deterministic. Gating. MUST NOT list the `ecluse` app library in build-depends:
-- its absence is the partition enforcement, mirroring ecluse-core-unit, so a shell spec
-- accidentally placed here fails to compile. Ecluse.Runtime.Server and Ecluse.Runtime.Env
-- exercise the shell's runServer/runWorker, so their specs stay in ecluse-unit; those two
-- modules are the unscoped entries in scripts/coverage.sh's ecluse-runtime-unit guard.
test-suite ecluse-runtime-unit
  import:             shared
  -- hspec-discover generates a Main without an export list. -threaded is required by the
  -- OpenTelemetry batch span processor the telemetry specs drive through the live SDK (it
  -- aborts under the non-threaded RTS).
  ghc-options:        -Wno-missing-export-lists -threaded
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     runtime/test/unit
  other-modules:
    Ecluse.Credential.CodeArtifactSpec
    Ecluse.Cve.SyncSpec
    Ecluse.LogSpec
    Ecluse.Queue.SqsSpec
    Ecluse.Server.DrainSpec
    Ecluse.Server.HaltSpec
    Ecluse.Telemetry.CorrelationSpec
    Ecluse.Telemetry.InstrumentsSpec
    Ecluse.Telemetry.ReportersSpec
    Ecluse.Telemetry.ResolveSpec
    Ecluse.Telemetry.TracingSpec
    Ecluse.TelemetrySpec

  build-tool-depends: hspec-discover:hspec-discover ^>=2.11
  build-depends:
    , ecluse:ecluse-core
    , ecluse:ecluse-runtime
    , ecluse:ecluse-test-support
    , aeson             ^>=2.2
    , amazonka          ^>=2.0
    , bytestring        ^>=0.12
    , conduit           ^>=1.3
    , directory         ^>=1.3
    , filepath          ^>=1.4 || ^>=1.5
    , hspec             ^>=2.11
    , http-client       ^>=0.7
    , http-types        ^>=0.12
    , hs-opentelemetry-api  ^>=1.0
    , hs-opentelemetry-exporter-in-memory  ^>=1.0
    , hs-opentelemetry-instrumentation-http-client  ^>=1.0
    , hs-opentelemetry-instrumentation-wai          ^>=1.0
    , hs-opentelemetry-propagator-w3c     ^>=1.0
    , hs-opentelemetry-sdk  ^>=1.0
    , katip             ^>=0.8.8
    , temporary         ^>=1.3
    , text              ^>=2.1
    , time              ^>=1.12
    , unliftio          ^>=0.2.25
    , wai               ^>=3.2
    , warp              ^>=3.4

-- Integration tests: exercise the real request path against in-process servers
-- (and, where they land, AWS-backed code against a ministack container via
-- testcontainers). Hermetic and gating; the AWS cases require a Docker daemon.
test-suite ecluse-integration
  import:             shared
  -- hspec-discover generates a Main without an export list. -threaded is required by
  -- the OpenTelemetry batch span processor the tracing integration test drives
  -- through the live SDK (it aborts under the non-threaded RTS).
  ghc-options:        -Wno-missing-export-lists -threaded
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test/integration
  other-modules:
    Ecluse.AwsEndToEndSpec
    Ecluse.CveSyncSpec
    Ecluse.Integration.Ministack
    Ecluse.MirrorQueueSpec
    Ecluse.Security.EgressOriginSpec
    Ecluse.Server.GracefulShutdownSpec
    Ecluse.Server.Pipeline.OriginSpec
    Ecluse.Server.Pipeline.PackumentSpec
    Ecluse.Server.Pipeline.SharedSpec
    Ecluse.Server.Pipeline.TarballSpec
    Ecluse.Server.Pipeline.TestSupport
    Ecluse.Server.PipelineSpec
    Ecluse.Server.PublishSpec
    Ecluse.TelemetryMetricsSpec
    Ecluse.TelemetryTracingSpec
    Ecluse.Test.SupportLinkageSpec
    Ecluse.WorkerSpec
    Ecluse.Pilot.S3ExportSpec

  build-tool-depends: hspec-discover:hspec-discover ^>=2.11
  build-depends:
    , aeson            ^>=2.2
    , amazonka         ^>=2.0
    , amazonka-sqs     ^>=2.0
    , amazonka-s3      ^>=2.0
    , bytestring       ^>=0.12
    , case-insensitive  ^>=1.2
    , containers       ^>=0.7
    , crypton          ^>=1.0
    , conduit          ^>=1.3
    , filepath         ^>=1.4 || ^>=1.5
    , ecluse
    , ecluse:ecluse-core
    , ecluse:ecluse-runtime
    , ecluse:ecluse-test-support
    , hspec            ^>=2.11
    , http-client      ^>=0.7
    , http-types       ^>=0.12
    , hs-opentelemetry-api  ^>=1.0
    , hs-opentelemetry-sdk  ^>=1.0
    , iproute          ^>=1.7
    , katip            ^>=0.8.8
    , memory           ^>=0.18
    , microlens        ^>=0.4.13
    , network          ^>=3.2
    , resourcet        ^>=1.3
    , testcontainers   ^>=0.5.3
    , temporary        ^>=1.3
    , text             ^>=2.1
    , time             ^>=1.12
    , unliftio         ^>=0.2.25
    , wai              ^>=3.2
    , wai-extra        ^>=3.1
    , warp             ^>=3.4

-- S54's bounded-memory streaming gate. Deliberately its OWN suite rather than a spec
-- inside ecluse-integration, for two structural reasons: the assertion samples live
-- bytes (GHC.Stats) while streaming, so it must not share a heap with hundreds of
-- other examples whose residency would drown the signal; and it needs the RTS
-- statistics flag (-T) baked in, which the wider tiers should not pay for. It reuses
-- the integration tier's canonical proxy fixture (TestSupport) via a shared source
-- directory instead of duplicating it.
test-suite ecluse-residency
  import:             shared
  -- TestSupport (shared with ecluse-integration) has no export list.
  ghc-options:        -Wno-missing-export-lists -threaded -rtsopts "-with-rtsopts=-T"
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test/residency test/integration
  other-modules:
    Ecluse.Server.Pipeline.TestSupport
    Ecluse.Server.TarballResidencySpec

  build-depends:
    , aeson             ^>=2.2
    , bytestring        ^>=0.12
    , case-insensitive  ^>=1.2
    , containers        ^>=0.7
    , crypton           ^>=1.0
    , ecluse
    , ecluse:ecluse-core
    , ecluse:ecluse-runtime
    , ecluse:ecluse-test-support
    , hspec             ^>=2.11
    , http-client      ^>=0.7
    , http-types       ^>=0.12
    , iproute          ^>=1.7
    , katip            ^>=0.8.8
    , memory           ^>=0.18
    , text             ^>=2.1
    , time             ^>=1.12
    , unliftio         ^>=0.2.25
    , wai              ^>=3.2
    , wai-extra        ^>=3.1
    , warp             ^>=3.4

-- Smoke tests: live calls to public registries (npm/PyPI) to validate our JSON
-- and protocol handling. ALLOWED TO FAIL by design (non-gating) — they depend on
-- uncontrolled external services.
test-suite ecluse-smoke
  import:             shared
  -- hspec-discover generates a Main without an export list.
  ghc-options:        -Wno-missing-export-lists
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test/smoke
  other-modules:
    Ecluse.Credential.CodeArtifactSpec
    Ecluse.Pilot.OsvOracleSpec
    Ecluse.RegistryProtocolSpec
    Ecluse.SecurityResolverOracleSpec
    Ecluse.Test.SupportLinkageSpec
    Ecluse.VersionOraclesSpec

  build-tool-depends: hspec-discover:hspec-discover ^>=2.11
  build-depends:
    , aeson            ^>=2.2
    , containers       ^>=0.7
    , directory        ^>=1.3
    , ecluse
    , ecluse:ecluse-core
    , ecluse:ecluse-runtime
    , ecluse:ecluse-test-support
    , hedgehog         ^>=1.5
    , hspec            ^>=2.11
    , hspec-hedgehog   ^>=0.3
    , http-client      ^>=0.7
    , http-client-tls  ^>=0.3.6
    , iproute          ^>=1.7
    , katip            ^>=0.8.8
    , network          ^>=3.2
    , process          ^>=1.6
    , sqlite-simple    ^>=0.4
    , temporary        ^>=1.3
    , text             ^>=2.1
    , unliftio         ^>=0.2.25

-- End-to-end tests: the whole system as the real OCI image, driven by the real npm
-- CLI over its public HTTP surface, with the server↔worker round-trip across real
-- containers. NON-GATING (pre-merge visibility + nightly) — needs a Docker daemon,
-- the npm CLI, and the `.#dockerImage` build, so it is far heavier than the gate.
-- It COMPILES in the normal build but only RUNS when ECLUSE_E2E_IMAGE names a loaded
-- image (otherwise every case is `pending`), so a bare `cabal test` never fails on a
-- machine without the setup. See planning/slices/S53-e2e-ecosystem.md.
test-suite ecluse-e2e
  import:             shared
  -- hspec-discover generates a Main without an export list.
  ghc-options:        -Wno-missing-export-lists
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test/e2e
  other-modules:
    Ecluse.E2E.Fixtures
    Ecluse.E2E.Harness
    Ecluse.E2E.Harness.Docker
    Ecluse.E2E.Harness.Npm
    Ecluse.E2E.Harness.Proxy
    Ecluse.E2E.Harness.Types
    Ecluse.E2E.Harness.Verdaccio
    Ecluse.E2E.SuiteSpec
    Ecluse.Test.SupportLinkageSpec

  build-tool-depends: hspec-discover:hspec-discover ^>=2.11
  build-depends:
    , aeson          ^>=2.2
    , bytestring     ^>=0.12
    , containers     ^>=0.7
    , crypton        ^>=1.0
    , directory      ^>=1.3
    , ecluse:ecluse-core
    , ecluse:ecluse-test-support
    , filepath       ^>=1.5
    , hspec          ^>=2.11
    , http-client    ^>=0.7
    , http-types     ^>=0.12
    , memory         ^>=0.18
    , network        ^>=3.2
    , text           ^>=2.1
    , time           ^>=1.12
    , typed-process  ^>=0.2.13
    , unliftio       ^>=0.2.25

-- Benchmarks: the work-per-request micro-benches over the pure
-- ecluse-core hot paths, plus the synthetic-corpus generator's correctness tests
-- and the complexity assertions that guard the accidentally-quadratic class.
-- tasty-bench (not criterion) is the harness: it reports time AND allocations
-- (the machine-independent signal, captured from GC stats under +RTS -T, baked in
-- below). It links ecluse:ecluse-core and ecluse:ecluse-test-support but is kept
-- OUT of the library's own dependency closure. See docs/architecture/performance.md.
benchmark ecluse-bench
  import:          shared
  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  hs-source-dirs:  bench
  -- Built at the package's default optimisation (-O1), like every other component,
  -- so the numbers reflect the shipped build rather than a benchmark-only setting.
  -- -T (baked into the RTS opts) makes tasty-bench report allocated bytes from GC
  -- stats on every run, with no caller flag.
  ghc-options:     -rtsopts "-with-rtsopts=-T"
  other-modules:
    Ecluse.Bench.Corpus
    Ecluse.Bench.Fit
    Ecluse.Core.MergeBench
    Ecluse.Core.RouteBench
    Ecluse.Core.RulesBench
    Ecluse.Core.SecurityBench
    Ecluse.Core.SelectiveBench
    Ecluse.Core.ServeBench
    Ecluse.Core.StreamBench
    Ecluse.Core.VersionBench
    Ecluse.Core.WireBench

  build-depends:
    , ecluse:ecluse-core
    , ecluse:ecluse-test-support
    , aeson            ^>=2.2
    , bytestring       ^>=0.12
    , containers       ^>=0.7
    , http-types       ^>=0.12
    , tasty            ^>=1.5
    , tasty-bench      ^>=0.4
    , tasty-bench-fit  ^>=0.1
    , tasty-hunit      ^>=0.10
    , text             ^>=2.1
    , time             ^>=1.12

-- Load benchmarks harness (S38): throughput & latency under concurrent load against the
-- real composed proxy. A separate EXECUTABLE (not a tasty-bench component): it boots
-- Ecluse.Server.application on warp over in-process stub upstreams and the in-memory
-- queue/credential doubles, drives the HTTP scenarios with `oha` (a subprocess, via
-- typed-process) and the worker scenario in-process, and captures RTS stats (peak
-- residency, GC pauses, allocations/request) — so it needs the threaded RTS (-threaded,
-- real warp + concurrency), -N (every core), and -T baked in (GHC.Stats). It links the
-- `ecluse` app library for the composed Application; kept out of the library closure.
-- INFORM-ONLY and not part of the gate. See docs/architecture/performance.md.
executable bench-load
  import:          shared
  main-is:         Main.hs
  hs-source-dirs:  bench/load

  -- The load harness drives in-process plain-http stub registries, so it needs the
  -- flag-gated loopback egress former (Ecluse.Core.Security.Egress.DevHttp). A
  -- release-posture build (the flag off -- the Nix docs/Haddock check included) has
  -- no such module by design, so this dev-only tool is simply not buildable there.
  if !flag(dev-http-egress)
    buildable: False
  -- Mirrors the shipped server's RTS tuning (-A64m -n4m; see `executable ecluse`)
  -- so the load benchmarks measure the runtime posture the proxy actually ships
  -- with; -T additionally exposes the RTS stats the harness reports.
  ghc-options:     -threaded -rtsopts "-with-rtsopts=-T -N -A64m -n4m"
  other-modules:
    Ecluse.BenchLoad.Error
    Ecluse.BenchLoad.Harness
    Ecluse.BenchLoad.Npm
    Ecluse.BenchLoad.Oha

  build-depends:
    , ecluse
    , ecluse:ecluse-bench-load
    , ecluse:ecluse-core
    , ecluse:ecluse-runtime
    , ecluse:ecluse-test-support
    , aeson            ^>=2.2
    , bytestring       ^>=0.12
    , containers       ^>=0.7
    , crypton          ^>=1.0
    , http-client      ^>=0.7
    , http-client-tls  ^>=0.3.6
    , http-types       ^>=0.12
    , iproute          ^>=1.7
    , katip            ^>=0.8.8
    , memory           ^>=0.18
    , text             ^>=2.1
    , time             ^>=1.12
    , typed-process    ^>=0.2.13
    , unliftio         ^>=0.2.25
    , wai              ^>=3.2
    , warp             ^>=3.4

-- Load benchmarks normalisation core: the PURE attribution and saturation maths the load
-- harness's two analysis views are built from (service-time upstream-vs-overhead split,
-- and the load-saturation queuing-delay flag). An INTERNAL sublibrary (the
-- ecluse-acceptance pattern) so the gating unit suite tests the maths deterministically,
-- while the live RTT probe + two-pass orchestration stay in the bench-load executable.
-- Carries no socket or load-generator dependency. See docs/architecture/performance.md.
library ecluse-bench-load
  import:          shared
  hs-source-dirs:  bench/load/src
  exposed-modules: Ecluse.BenchLoad.Normalise
  build-depends:   text ^>=2.1

-- Work-per-request bench report core: the PURE CSV-to-Markdown rendering behind the
-- bench run summary (parse the tasty-bench CSV, group by tasty path, render the
-- structured report). An INTERNAL sublibrary (the ecluse-bench-load pattern) so the
-- gating unit suite exercises the parse and rendering deterministically. No HTTP and
-- no egress former, so unlike bench-load it needs no dev-http-egress gating; kept
-- out of the shipped library closure.
library ecluse-bench-report
  import:          shared
  hs-source-dirs:  bench/report/src
  exposed-modules: Ecluse.BenchReport
  build-depends:   text ^>=2.1

-- The bench report renderer: the thin file-reading shell over ecluse-bench-report.
-- CI runs it after the benchmarks to turn bench-results.csv (plus the teed console
-- output) into the run summary; it appends to $GITHUB_STEP_SUMMARY itself, like the
-- load and acceptance harnesses, so the workflow step stays a single unwrapped
-- command.
executable bench-report
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: bench/report
  build-depends:
    , ecluse:ecluse-bench-report
    , text  ^>=2.1

-- Live performance-acceptance harness (Context B): the PURE evaluation core. The
-- version-controlled acceptance criteria, the per-package budget verdict, and the
-- run-summary rendering. An INTERNAL sublibrary (the ecluse-manifest pattern) so the
-- gating unit suite can test the acceptance decision deterministically, while the
-- live fetch + timing stay in the perf-acceptance executable. Links ecluse-core only;
-- kept out of the shipped library closure. See docs/architecture/performance.md.
library ecluse-acceptance
  import:          shared
  hs-source-dirs:  acceptance/src
  exposed-modules: Ecluse.Acceptance
  build-depends:
    , ecluse:ecluse-core
    , aeson       ^>=2.2
    , bytestring  ^>=0.12
    , containers  ^>=0.7
    , text        ^>=2.1

-- The live performance-acceptance harness (Context B): a separate EXECUTABLE that
-- fetches LIVE packuments for the curated catalogue set (Ecluse.Test.RegistryCapture),
-- times Ecluse's work-per-request over each, and evaluates the overhead against the
-- version-controlled budget (ecluse-acceptance). Runs on demand / scheduled / per-PR,
-- NEVER per-PR-gating: a budget breach reds the (non-required) check to inform a human
-- decision, it never blocks merge. Kept out of the shipped library closure. See
-- docs/architecture/performance.md.
executable perf-acceptance
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: acceptance/app
  build-depends:
    , ecluse:ecluse-acceptance
    , ecluse:ecluse-core
    , ecluse:ecluse-test-support
    , aeson            ^>=2.2
    , bytestring       ^>=0.12
    , containers       ^>=0.7
    , http-client      ^>=0.7
    , http-client-tls  ^>=0.3.6
    , text             ^>=2.1
    , time             ^>=1.12
